# ez-animate

./: .gitignore  .pre-commit-config.yaml  404.html  DEVELOPMENT.md  GOALS.md  README.md  generate_thumbs.py  index.html  main.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  gh-pages.yml  lint-format.yml  mypy.yml  publish-to-pypi.yml  verify-pip-install.yml
api/: index.html
compatibility/: index.html
contributing/: index.html
docs/: api.md  compatibility.md  contributing.md  gallery.md  generate_gallery.py  getting_started.md  index.md  usage.md
docs/gallery_examples/: sega_learn_classification_logisticRegression.md  sega_learn_classification_perceptron.md  sega_learn_clustering_dbscan.md  sega_learn_forecast_exponentialMovingAverage.md  sega_learn_forecast_ransac.md  sega_learn_forecast_ridge.md  sega_learn_forecast_weightedMovingAverage.md  sega_learn_regression_ridge.md  sklearn_classification_gradientBoostingClassifier.md  sklearn_classification_sgd.md  sklearn_clustering_kmeans.md  sklearn_clustering_kmeans_traced.md  sklearn_forecast_quantileRegressor.md  sklearn_regression_lasso.md  sklearn_regression_sgd.md
examples/: classification_logisticRegression.py  classification_perceptron.py  forecast_exponentialMovingAverage.py  forecast_weightedMovingAverage.py  regression_ridge.py
examples/sega_learn/: classification_logisticRegression.py  classification_perceptron.py  clustering_dbscan.py  forecast_exponentialMovingAverage.py  forecast_ransac.py  forecast_ridge.py  forecast_weightedMovingAverage.py  regression_ridge.py
examples/sklearn/: classification_gradientBoostingClassifier.py  classification_sgd.py  clustering_kmeans.py  clustering_kmeans_traced.py  forecast_quantileRegressor.py  regression_lasso.py  regression_ridge.py  regression_sgd.py  transformation_minmax_scaler.py  transformation_quantile.py
gallery/: index.html
gallery_examples/sega_learn_classification_logisticRegression/: index.html
gallery_examples/sega_learn_classification_perceptron/: index.html
gallery_examples/sega_learn_clustering_dbscan/: index.html
gallery_examples/sega_learn_forecast_exponentialMovingAverage/: index.html
gallery_examples/sega_learn_forecast_ransac/: index.html
gallery_examples/sega_learn_forecast_ridge/: index.html
gallery_examples/sega_learn_forecast_weightedMovingAverage/: index.html
gallery_examples/sega_learn_regression_ridge/: index.html
gallery_examples/sklearn_classification_gradientBoostingClassifier/: index.html
gallery_examples/sklearn_classification_sgd/: index.html
gallery_examples/sklearn_clustering_kmeans/: index.html
gallery_examples/sklearn_clustering_kmeans_traced/: index.html
gallery_examples/sklearn_forecast_quantileRegressor/: index.html
gallery_examples/sklearn_regression_lasso/: index.html
gallery_examples/sklearn_regression_sgd/: index.html
getting_started/: index.html
search/: search_index.json
src/ez_animate/: __init__.py  animation_base.py  animator.py  classification_animation.py  clustering_animation.py  forecasting_animation.py  regression_animation.py  transformation_animation.py  utils.py
tests/: test_animation_integration.py  test_animator.py  test_classification_animation.py  test_clustering_animation.py  test_examples.py  test_forecasting_animation.py  test_imports.py  test_regression_animation.py  test_transformation_animation.py  test_utils.py  utils.py
usage/: index.html
